--- a/hd.html
+++ b/hd.html
@@ -9,14 +9,17 @@
 <body>
     <h1>Huong dan</h1>
     <ul>
-        <li>Bước 1 : Cài đặt extension
+        <li>Bước 1: Cài đặt extension
             <img  style="display: block;" width="500" src="1.png" alt="">
         </li>
-        <li style="margin:20px 0px;">Bước 2 : Nhấn Ctrl + shift + p - gõ "monokai" - chọn "enter license"
+        <li style="margin:20px 0px;">Bước 2: Nhấn Ctrl + shift + p - gõ "monokai" - chọn "enter license"
             <img style="display: block;" width="500" src="2.png" alt="">
         </li>
         <li>
-            Bước 3: Nhập email , và key
+            Bước 3: Tắt mạng
+        </li>
+        <li>
+            Bước 4: Nhập email , và key
         </li>
     </ul>
 </body>
