--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Monokai Pro Generator</h1>
   <a target="_blank" style="display: block; margin-bottom: 20px;" href="hd.html">Xem hướng dẫn</a>
-  <input type="text" id="email">
+  <input placeholder="email" type="text" id="email">
   <button>Lấy key</button>
   <div class="result"></div>
 </body>
